# denViews-rs

./: Cargo.toml  README.md  build.rs  build_for_lambda.sh  denviews-schema-v1.md  denviews-schema.md
dashboard/: .neutrinorc.js  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  Folders.jsx  Forms.jsx  Pages.jsx  init.jsx  settings.jsx  util.jsx
lambda_setup/: lambda_setup.py
src/: database.rs  main.rs
src/clients/: api_handler.rs  hosted.rs  init.html  mod.rs  tools.rs
src/dashboard/: mod.rs
src/database/: database_tools.rs  mod.rs  start.rs  util.rs  view_manager.rs
src/database/mariadb/: database.rs  database_tools.rs  mod.rs
src/database/postgres/: database.rs  database_tools.rs  mod.rs
src/servers/: mod.rs
src/servers/handlers/: hosted.rs  lambda.rs  mod.rs
src/servers/routing/: api.rs  mod.rs  response_utils.rs  tools.rs
src/util/: base64.rs  mod.rs
