[package]
name = "denviews"
version = "0.1.0"
edition = "2018"

[features]
default = ["hosted"]
aws-lambda = ["lambda_runtime"]
hosted = []

[[bin]]
name = "bootstrap"
path = "src/main.rs"
required-features = ["aws-lambda"]

[[bin]]
name = "denviews"
path = "src/main.rs"
required-features = ["hosted"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.51"
bb8 = "0.7.1"
bb8-postgres = { version = "0.7.0", features = ["with-serde_json-1", "with-time-0_2"] }
chrono = "0.4.19"
futures-core = "0.3.17"
futures-util = "0.3.17"
http = "0.2.4"
hyper = { version = "0.14.12", features = ["client", "server", "http1", "http2", "tcp", "stream"] }
hyper-rustls = { version = "0.22.1", features = ["rustls-native-certs"] }
lambda_runtime = { version = "0.4", optional = true }
log = "0.4.14"
pin-project = "1.0.8"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
rand = "0.8.4"
rust-crypto = "0.2.36"
rust-embed = "6.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8.4"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql", "postgres", "chrono", "json" ] }
tokio = { version = "1.11.0", features = ["full"] }
tokio-rustls = "0.22.0"
tracing = "0.1.26"
tracing-subscriber = "0.2"
